--- a/style.css
+++ b/style.css
@@ -1,3 +1,97 @@
-/* p{
-    color :aqua
-} */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  position: relative;
+  width: 100vw;
+  height: 100px;
+  color: aliceblue;
+}
+
+#bg-image {
+  position: absolute;
+  z-index: -1;
+}
+
+.navbar-container {
+  background-color: black;
+  display: flex;
+
+  
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+  letter-spacing: 1px;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.container-text {
+  display: flex;
+  position: relative;
+  gap: 60px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#logo {
+  width: 60px;
+  height: 20px;
+  margin-left: 120px;
+}
+
+.line {
+  font-weight: 10;
+  font-size: 40px;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 40px;
+  width: 140px;
+  border-radius: 5px;
+  background-color: #da0fe5;
+}
+
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: black;
+}
+
+.heading {
+  font-size: 60px;
+  color: #f9f7f7;
+  margin-top: 200px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 800;
+  letter-spacing: 1px;
+}
+
+.sub-heading {
+  margin-top: 30px;
+  color: white;
+  font-family: "Times New Roman", Times, serif;
+  letter-spacing: 1px;
+}
+
+.btn2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+  height: 40px;
+  width: 200px;
+  border-radius: 5px;
+  background-color: #da0fe5;
+  color: white;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
